--- a/pages/17086.html
+++ b/pages/17086.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -900,7 +900,7 @@ margin-left: 0em;
 
 <p>What is called the <em>21cm hydrogen line</em> or just <em>hydrogen line</em> is the signature of the <a class='existingWikiWord' href='/nlab/show/electromagnetic+radiation'>electromagnetic radiation</a> of <a class='existingWikiWord' href='/nlab/show/wavelength'>wavelength</a> about 21<a class='existingWikiWord' href='/nlab/show/meter'>cm</a> which is emitted by <a class='existingWikiWord' href='/nlab/show/hydrogen+atom'>hydrogen</a> <a class='existingWikiWord' href='/nlab/show/atom'>atoms</a> when the <a class='existingWikiWord' href='/nlab/show/electron'>electrons</a> in their shell change <a class='existingWikiWord' href='/nlab/show/quantum+state'>quantum state</a> from the “triplet” to the singlet <a class='existingWikiWord' href='/nlab/show/ground+state'>ground state</a>.</p>
 
-<p>In the context of <a class='existingWikiWord' href='/nlab/show/cosmology'>cosmology</a> it has been argued (<a href='#HiganRees79'>Higan-Rees 79</a>) that observation of a absorption at the 21cm hydrogen line in the <a class='existingWikiWord' href='/nlab/show/cosmic+microwave+background+radiation'>cosmic microwave background</a> would be a signal the time when the first <span class='newWikiWord'>stars<a href='/nlab/new/stars'>?</a></span> formed and ignited, a cosmological epoch not otherwise accessible to observation. A claim of detection of this signal by the <span class='newWikiWord'>EDGES<a href='/nlab/new/EDGES'>?</a></span> <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> appeared in <a href='#BRMMM18'>BRMMM 18</a>.</p>
+<p>In the context of <a class='existingWikiWord' href='/nlab/show/cosmology'>cosmology</a> it has been argued (<a href='#HiganRees79'>Higan-Rees 79</a>) that observation of a absorption at the 21cm hydrogen line in the <a class='existingWikiWord' href='/nlab/show/cosmic+microwave+background+radiation'>cosmic microwave background</a> would be a signal from the time when the first <span class='newWikiWord'>stars<a href='/nlab/new/stars'>?</a></span> formed and ignited, a cosmological epoch not otherwise accessible to observation. A claim of detection of this signal by the <a class='existingWikiWord' href='/nlab/show/EDGES'>EDGES</a> <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> appeared in <a href='#BRMMM18'>BRMMM 18</a>.</p>
 
 <h2 id='related_entries'>Related entries</h2>
 
@@ -927,7 +927,7 @@ margin-left: 0em;
 <p>The suggestion that the 21cm hydrogen absorption line in the <a class='existingWikiWord' href='/nlab/show/cosmic+microwave+background+radiation'>cosmic microwave background</a> should be an interesting probe for early universe <a class='existingWikiWord' href='/nlab/show/cosmology'>cosmology</a> goes back to</p>
 
 <ul>
-<li id='HiganRees79'>C. J. Hogan, <a class='existingWikiWord' href='/nlab/show/Martin+Rees'>Martin Rees</a>, <em>Spectral appearance of non-uniform gas at high <math class='maruku-mathml' display='inline' id='mathml_708506a614ee943b89d67d55ce49c7164867928f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>z</mi></mrow><annotation encoding='application/x-tex'>z</annotation></semantics></math></em>, Monthly Notices of the Royal Astronomical Society, Volume 188, Issue 4, 1 October 1979, Pages 791–798 (<a href='https://doi.org/10.1093/mnras/188.4.791'>doi:10.1093/mnras/188.4.791</a>)</li>
+<li id='HiganRees79'>C. J. Hogan, <a class='existingWikiWord' href='/nlab/show/Martin+Rees'>Martin Rees</a>, <em>Spectral appearance of non-uniform gas at high <math class='maruku-mathml' display='inline' id='mathml_76f962fabc50307c92e7c74a79b263e8bf94bb3f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>z</mi></mrow><annotation encoding='application/x-tex'>z</annotation></semantics></math></em>, Monthly Notices of the Royal Astronomical Society, Volume 188, Issue 4, 1 October 1979, Pages 791–798 (<a href='https://doi.org/10.1093/mnras/188.4.791'>doi:10.1093/mnras/188.4.791</a>)</li>
 </ul>
 
 <p>Review includes</p>
@@ -946,7 +946,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>A claim of detection of the cosmological signal is due to</p>
+<p>A claim of detection of the cosmological signal by the <a class='existingWikiWord' href='/nlab/show/EDGES'>EDGES</a> <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> is due to</p>
 
 <ul>
 <li id='BRMMM18'>Judd D. Bowman, Alan E. E. Rogers, Raul A. Monsalve, Thomas J. Mozdzen, Nivedita Mahesh, <em>An absorption profile centred at 78 megahertz in the sky-averaged spectrum</em>, Nature volume 555, pages 67–70 (01 March 2018) (<a href='https://www.nature.com/articles/nature25792'>doi:10.1038/nature25792</a>)</li>
@@ -963,7 +963,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 12, 2018 09:57:28
+  Revised on April 12, 2018 10:05:26
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (91.230.41.206).
   See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
