--- a/pages/19106.html
+++ b/pages/19106.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      LIGO-Virgo in nLab
+      EDGES in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      LIGO-Virgo
+      EDGES
   </h1>
 
 
@@ -292,7 +292,7 @@ margin-left: 0em;
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8423/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -900,51 +900,47 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>An <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> designed to directly detect <a class='existingWikiWord' href='/nlab/show/gravitational+wave'>gravitational waves</a>.</p>
-
-<p>Reported detections include: <a href='#LIGO16'>LIGO 16</a>, <a href='#LIGOVirgo17'>LIGO-Virgo 17</a>.</p>
+<p>An <span class='newWikiWord'>astrophysics<a href='/nlab/new/astrophysics'>?</a></span> <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a></p>
 
 <h2 id='related_entries'>Related entries</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/LHC'>LHC</a>, <a class='existingWikiWord' href='/nlab/show/Super-Kamiokande'>Super-Kamiokande</a>, <a class='existingWikiWord' href='/nlab/show/EDGES'>EDGES</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/LHC'>LHC</a>, <a class='existingWikiWord' href='/nlab/show/LIGO-Virgo'>LIGO</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Super-Kamiokande'>Super-Kamiokande</a></p>
+</li>
 </ul>
 
 <h2 id='references'>References</h2>
 
 <ul>
 <li>
-<p><a href='https://www.ligo.caltech.edu'>LIGO website</a></p>
+<p><a href='https://www.haystack.mit.edu/'>MIT Haystack Observatory</a>: <em><a href='https://www.haystack.mit.edu/ast/arrays/Edges/'>EDGES: Experiment to Detect the Global EoR Signature</a></em></p>
 </li>
 
 <li>
-<p><a href='http://www.virgo-gw.eu/'>Virgo website</a></p>
-</li>
-
-<li>
-<p>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/LIGO'>LIGO</a></em>, <em><a href='https://en.wikipedia.org/wiki/Virgo_interferometer'>Virgo</a></em> ,</p>
+<p>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Experiment_to_Detect_the_Global_EoR_Signature'>Experiment to Detect the Global EoR Signature</a></em></p>
 </li>
 </ul>
 
-<p>Signa from two <a class='existingWikiWord' href='/nlab/show/black+hole'>black holes</a> merging:</p>
+<p>Claim of detection of the <a class='existingWikiWord' href='/nlab/show/hydrogen+line'>hydrogen line</a> in the <a class='existingWikiWord' href='/nlab/show/cosmic+microwave+background+radiation'>cosmic microwave background</a> is due to</p>
 
 <ul>
-<li id='LIGO16'>B. P. Abbott et al. (LIGO Scientific Collaboration and Virgo Collaboration), <em>Observation of Gravitational Waves from a Binary Black Hole Merger</em>, Phys. Rev. Lett. 116, 061102, 11 February 2016, doi:<a href='http://dx.doi.org/10.1103/PhysRevLett.116.061102'>10.1103/PhysRevLett.116.061102</a></li>
+<li id='BRMMM18'>Judd D. Bowman, Alan E. E. Rogers, Raul A. Monsalve, Thomas J. Mozdzen, Nivedita Mahesh, <em>An absorption profile centred at 78 megahertz in the sky-averaged spectrum</em>, Nature volume 555, pages 67–70 (01 March 2018) (<a href='https://www.nature.com/articles/nature25792'>doi:10.1038/nature25792</a>)</li>
 </ul>
 
-<p>Signal from two <a class='existingWikiWord' href='/nlab/show/neutron+star'>neutron stars</a> merging:</p>
+<p>Discussion of this claim incluces</p>
 
 <ul>
-<li id='LIGOVirgo17'>B. P. Abbott et al. (LIGO Scientific Collaboration and Virgo Collaboration), <em>GW170817: Observation of Gravitational Waves from a Binary Neutron Star Inspiral</em> Phys. Rev. Lett. 119, 161101, 2017 (<a href='https://doi.org/10.1103/PhysRevLett.119.161101'>doi:10.1103/PhysRevLett.119.161101</a>)</li>
+<li id='Falkowski18'><a class='existingWikiWord' href='/nlab/show/Adam+Falkowski'>Adam Falkowski</a>, <em><a href='http://resonaances.blogspot.fr/2018/03/21cm-to-dark-matter.html'>21cm to dark matter</a></em>, March 2018</li>
 </ul>
-
-<p>
- 
-</p>
 </div>
 
 <div class="revisedby">
-  Revised on April 12, 2018 10:03:48
+  Created on April 12, 2018 10:02:34
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (91.230.41.206).
   See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
@@ -952,15 +948,15 @@ margin-left: 0em;
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/LIGO-Virgo" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/LIGO-Virgo/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/LIGO-Virgo" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/LIGO-Virgo" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/EDGES" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
 
   <span class="views">
     | Views:
-    <a href="/nlab/print/LIGO-Virgo" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/EDGES" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/LIGO-Virgo" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/EDGES" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/LIGO-Virgo" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/EDGES" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
