--- a/pages/8335.html
+++ b/pages/8335.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -899,10 +897,16 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#general'>General</a></li><li><a href='#on_the_primordial_bmode'>On the primordial B-mode</a></li></ul></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#hydrogen_line'>Hydrogen line</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#general'>General</a></li><li><a href='#on_the_hydron_line'>On the hydron line</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>(…)</p>
+
+<h2 id='properties'>Properties</h2>
+
+<h3 id='hydrogen_line'>Hydrogen line</h3>
+
+<p>It has been argued (<a href='#HiganRees79'>Higan-Rees 79</a>) that observation of a absorption at the 21cm <a class='existingWikiWord' href='/nlab/show/hydrogen+line'>hydrogen line</a> in the cosmic microwave background would be a signal from the time when the first <span class='newWikiWord'>stars<a href='/nlab/new/stars'>?</a></span> formed and ignited, a cosmological epoch not otherwise accessible to observation. A claim of detection of this signal by the <a class='existingWikiWord' href='/nlab/show/EDGES'>EDGES</a> <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> appeared in <a href='#BRMMM18'>BRMMM 18</a>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -930,12 +934,22 @@ margin-left: 0em;
 
 <p>See also the references at <em><a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>cosmic inflation</a></em>.</p>
 
-<h3 id='on_the_primordial_bmode'>On the primordial B-mode</h3>
-
-<p>Reviews include</p>
+<h3 id='on_the_hydron_line'>On the hydron line</h3>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Matthew+Strassler'>Matthew Strassler</a>, <em><a href='http://profmattstrassler.com/2014/03/16/getting-ready-for-the-cosmic-news/'>Getting Ready for the Cosmic News</a></em> (March 16, 2014), <em><a href='http://profmattstrassler.com/2014/03/17/a-primer-on-todays-events/'>A primer on today’s events</a></em> (March 17, 2014)</li>
+<li id='HiganRees79'>C. J. Hogan, <a class='existingWikiWord' href='/nlab/show/Martin+Rees'>Martin Rees</a>, <em>Spectral appearance of non-uniform gas at high <math class='maruku-mathml' display='inline' id='mathml_0e8d3c9107573955b8a7d8a6441c4f0ecfd415e3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>z</mi></mrow><annotation encoding='application/x-tex'>z</annotation></semantics></math></em>, Monthly Notices of the Royal Astronomical Society, Volume 188, Issue 4, 1 October 1979, Pages 791–798 (<a href='https://doi.org/10.1093/mnras/188.4.791'>doi:10.1093/mnras/188.4.791</a>)</li>
+</ul>
+
+<p>A claim of detection of the cosmological signal by the <a class='existingWikiWord' href='/nlab/show/EDGES'>EDGES</a> <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> is due to</p>
+
+<ul>
+<li id='BRMMM18'>Judd D. Bowman, Alan E. E. Rogers, Raul A. Monsalve, Thomas J. Mozdzen, Nivedita Mahesh, <em>An absorption profile centred at 78 megahertz in the sky-averaged spectrum</em>, Nature volume 555, pages 67–70 (01 March 2018) (<a href='https://www.nature.com/articles/nature25792'>doi:10.1038/nature25792</a>)</li>
+</ul>
+
+<p>Discussion of this claim incluces</p>
+
+<ul>
+<li id='Falkowski18'><a class='existingWikiWord' href='/nlab/show/Adam+Falkowski'>Adam Falkowski</a>, <em><a href='http://resonaances.blogspot.fr/2018/03/21cm-to-dark-matter.html'>21cm to dark matter</a></em>, March 2018</li>
 </ul>
 
 <p>
@@ -946,19 +960,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March  3, 2018 02:18:03 
+  Revised on April 12, 2018 10:07:15
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (92.99.114.243)
+  (91.230.41.206).
+  See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cosmic+microwave+background+radiation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cosmic+microwave+background+radiation/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/cosmic+microwave+background+radiation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cosmic+microwave+background+radiation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/cosmic+microwave+background+radiation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cosmic+microwave+background+radiation/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/cosmic+microwave+background+radiation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cosmic+microwave+background+radiation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/cosmic+microwave+background+radiation" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/cosmic+microwave+background+radiation" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/cosmic+microwave+background+radiation" id="view_source" rel="nofollow">Source</a>
