--- a/pages/16757.html
+++ b/pages/16757.html
@@ -292,7 +292,7 @@ margin-left: 0em;
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/6715/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/6715/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -310,7 +310,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#general'>General</a></li><li><a href='#in_the_context_of_string_compactifications'>In the context of string compactifications</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>An <em>ADE singularity</em> is a <a class='existingWikiWord' href='/nlab/show/orbifold'>orbifold</a> fixed point locally of the form <math class='maruku-mathml' display='inline' id='mathml_090f99aac69a9529effaac4668742bc0bdaa7e3a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℂ</mi> <mn>2</mn></msup><mo stretchy='false'>/</mo><mi>Γ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{C}^2/\Gamma</annotation></semantics></math> with <math class='maruku-mathml' display='inline' id='mathml_090f99aac69a9529effaac4668742bc0bdaa7e3a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Γ</mi><mo>↪</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\Gamma \hookrightarrow SU(2)</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/finite+group'>finite</a> <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroup</a> of the <a class='existingWikiWord' href='/nlab/show/special+unitary+group'>special unitary group</a> given by the <a class='existingWikiWord' href='/nlab/show/ADE+classification'>ADE classification</a> (and <math class='maruku-mathml' display='inline' id='mathml_090f99aac69a9529effaac4668742bc0bdaa7e3a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SU(2)</annotation></semantics></math> is understood with its defining linear <a class='existingWikiWord' href='/nlab/show/action'>action</a> on the <a class='existingWikiWord' href='/nlab/show/complex+number'>complex</a> <a class='existingWikiWord' href='/nlab/show/vector+space'>vector space</a> <math class='maruku-mathml' display='inline' id='mathml_090f99aac69a9529effaac4668742bc0bdaa7e3a_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℂ</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{C}^2</annotation></semantics></math>).</p>
+<p>An <em>ADE singularity</em> is a <a class='existingWikiWord' href='/nlab/show/orbifold'>orbifold</a> fixed point locally of the form <math class='maruku-mathml' display='inline' id='mathml_78d15b4e63231e4d5f55c9d8efee0428d45d647d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℂ</mi> <mn>2</mn></msup><mo stretchy='false'>/</mo><mi>Γ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{C}^2/\Gamma</annotation></semantics></math> with <math class='maruku-mathml' display='inline' id='mathml_78d15b4e63231e4d5f55c9d8efee0428d45d647d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Γ</mi><mo>↪</mo><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\Gamma \hookrightarrow SU(2)</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/finite+group'>finite</a> <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroup</a> of the <a class='existingWikiWord' href='/nlab/show/special+unitary+group'>special unitary group</a> given by the <a class='existingWikiWord' href='/nlab/show/ADE+classification'>ADE classification</a> (and <math class='maruku-mathml' display='inline' id='mathml_78d15b4e63231e4d5f55c9d8efee0428d45d647d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SU(2)</annotation></semantics></math> is understood with its defining linear <a class='existingWikiWord' href='/nlab/show/action'>action</a> on the <a class='existingWikiWord' href='/nlab/show/complex+number'>complex</a> <a class='existingWikiWord' href='/nlab/show/vector+space'>vector space</a> <math class='maruku-mathml' display='inline' id='mathml_78d15b4e63231e4d5f55c9d8efee0428d45d647d_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℂ</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{C}^2</annotation></semantics></math>).</p>
 <div style='float: left; margin: 0 10px 10px 0;'><img alt='ADE 2Cycle' src='http://ncatlab.org/nlab/files/ADE2Cycle.jpeg' width='200'/></div>
 <p>These singularities have <a class='existingWikiWord' href='/nlab/show/resolution+of+singularities'>crepant resolutions</a>, obtained by repeatedly <a class='existingWikiWord' href='/nlab/show/resolution+of+singularities'>blowing up</a> at singular points. The resulting exceptional fiber (the blow-up of the singular point, an <a class='existingWikiWord' href='/nlab/show/ALE+space'>ALE space</a>) is a <a class='existingWikiWord' href='/nlab/show/union'>union</a> of <a class='existingWikiWord' href='/nlab/show/Riemann+sphere'>Riemann spheres</a> that touch each other such as to form the shape of the corresponding <a class='existingWikiWord' href='/nlab/show/Dynkin+diagram'>Dynkin diagram</a>.</p>
 
@@ -356,7 +356,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Miles+Reid'>Miles Reid</a>, <em>The Du Val Singularities <math class='maruku-mathml' display='inline' id='mathml_090f99aac69a9529effaac4668742bc0bdaa7e3a_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>A</mi> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>A_n</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_090f99aac69a9529effaac4668742bc0bdaa7e3a_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>D</mi> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>D_n</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_090f99aac69a9529effaac4668742bc0bdaa7e3a_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>E</mi> <mn>6</mn></msub></mrow><annotation encoding='application/x-tex'>E_6</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_090f99aac69a9529effaac4668742bc0bdaa7e3a_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>E</mi> <mn>7</mn></msub></mrow><annotation encoding='application/x-tex'>E_7</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_090f99aac69a9529effaac4668742bc0bdaa7e3a_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>E</mi> <mn>8</mn></msub></mrow><annotation encoding='application/x-tex'>E_8</annotation></semantics></math></em> (<a href='http://homepages.warwick.ac.uk/~masda/surf/more/DuVal.pdf'>pdf</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Miles+Reid'>Miles Reid</a>, <em>The Du Val Singularities <math class='maruku-mathml' display='inline' id='mathml_78d15b4e63231e4d5f55c9d8efee0428d45d647d_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>A</mi> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>A_n</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_78d15b4e63231e4d5f55c9d8efee0428d45d647d_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>D</mi> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>D_n</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_78d15b4e63231e4d5f55c9d8efee0428d45d647d_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>E</mi> <mn>6</mn></msub></mrow><annotation encoding='application/x-tex'>E_6</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_78d15b4e63231e4d5f55c9d8efee0428d45d647d_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>E</mi> <mn>7</mn></msub></mrow><annotation encoding='application/x-tex'>E_7</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_78d15b4e63231e4d5f55c9d8efee0428d45d647d_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>E</mi> <mn>8</mn></msub></mrow><annotation encoding='application/x-tex'>E_8</annotation></semantics></math></em> (<a href='http://homepages.warwick.ac.uk/~masda/surf/more/DuVal.pdf'>pdf</a>)</p>
 </li>
 
 <li>
@@ -379,7 +379,7 @@ margin-left: 0em;
 <p>Families of examples of <a class='existingWikiWord' href='/nlab/show/G2+manifold'>G2 orbifolds</a> with ADE singularities are constructed in</p>
 
 <ul>
-<li id='Reidegeld15'><a class='existingWikiWord' href='/nlab/show/Frank+Reidegeld'>Frank Reidegeld</a>, <em><math class='maruku-mathml' display='inline' id='mathml_090f99aac69a9529effaac4668742bc0bdaa7e3a_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-orbifolds from K3 surfaces with ADE-singularities</em> (<a href='http://arxiv.org/abs/1512.05114'>arXiv:1512.05114</a>)</li>
+<li id='Reidegeld15'><a class='existingWikiWord' href='/nlab/show/Frank+Reidegeld'>Frank Reidegeld</a>, <em><math class='maruku-mathml' display='inline' id='mathml_78d15b4e63231e4d5f55c9d8efee0428d45d647d_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-orbifolds from K3 surfaces with ADE-singularities</em> (<a href='http://arxiv.org/abs/1512.05114'>arXiv:1512.05114</a>)</li>
 </ul>
 
 <h3 id='in_the_context_of_string_compactifications'>In the context of string compactifications</h3>
@@ -391,10 +391,6 @@ margin-left: 0em;
 
 <li id='IbanezUranga12'>
 <p><a class='existingWikiWord' href='/nlab/show/Luis+Ib%C3%A1%C3%B1ez'>Luis Ibáñez</a>, <a class='existingWikiWord' href='/nlab/show/%C3%81ngel+Uranga'>Angel Uranga</a>, section 6.3.3 of <em><a class='existingWikiWord' href='/nlab/show/String+Theory+and+Particle+Physics+--+An+Introduction+to+String+Phenomenology'>String Theory and Particle Physics -- An Introduction to String Phenomenology</a></em>, Cambridge University Press 2012</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Martin+Wijnholt'>Martin Wijnholt</a>, slides 6-10 of <em>String compactification</em>, PITP 2014 (<a href='https://ncatlab.org/nlab/files/WijnholtCompactification14.pdf'>pdf</a>)</p>
 </li>
 </ul>
 
@@ -417,15 +413,15 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 13, 2018 09:46:32
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (147.147.173.215).
-  See <a href="https://ncatlab.org/nlab/author/David Corfield" style="color: #005c19">Author — David Corfield</a> for an overview of the nLab pages to which David Corfield has contributed.
+  Revised on April 13, 2018 10:58:57
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (91.230.41.205).
+  See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/ADE+singularity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/ADE+singularity/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/ADE+singularity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/ADE+singularity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/ADE+singularity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/ADE+singularity/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/ADE+singularity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/ADE+singularity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
 
   <span class="views">
     | Views:
